Added - Mapping to x and y
Offsets are the distance between the center of each note (Both in x and
y)
Defaulted to 4mm for x, 3mm for y based on Martin's pictures and
measurements.

--- a/miditocutter.html
+++ b/miditocutter.html
@@ -50,12 +50,22 @@
 					}
 					if (event.type == "noteon") {
 						var rtime = timeAtLastTempoChange + tempo * (event.tick - ticksAtLastTempoChange) / ppq;
-						notesAgainstTime.push({time: rtime, pitch: event.pitch});
+						notesAgainstTime.push({time: rtime, pitch: event.pitch, x: 0, y: 0});
 					}
 				}
 				notesAgainstTime.sort(function(a,b) {
 					return a.time > b.time;
 				});
+				
+				var machineTempo = 1000000;
+				var xOffset = .4;
+				var yOffset = .3;
+				
+				for (var i=0; i<notesAgainstTime.length; i++) {
+					var note = notesAgainstTime[i];
+					note.x = (note.time/machineTempo)*xOffset;
+					note.y = (note.pitch-60)*yOffset;
+				}
 				console.log(notesAgainstTime);
 			};
 			
