Add support for harmonic and melodic minor modes in scale generator

--- a/miditocutter.html
+++ b/miditocutter.html
@@ -17,14 +17,33 @@
 					mixolydian: [2,2,1,2,2,1],
 					aeolian:    [2,1,2,2,1,2],
 					locrian:    [1,2,2,1,2,2] 
+				},
+				harmonic_minor: {
+					harmminor: 		[2,1,2,2,1,3],
+					locriansharpsix:[1,2,2,1,3,1], 
+					ionianaug:     	[2,2,1,3,1,2], 
+					romanian: 		[2,1,3,1,2,1],
+					phrygiandom:   	[1,3,1,2,1,2],
+					lydiansharptwo: [3,1,2,1,2,2],
+					ultralocrian:   [1,2,1,2,2,1]
+				},
+				melodic_minor: {
+					jazz_minor: 		[2,1,2,2,2,2],
+					dorianflatnine: 	[1,2,2,2,2,1],
+					lydianaug: 			[2,2,2,2,1,2],
+					lydiandom: 			[2,2,2,1,2,1],
+					mixolydianflatsix: 	[2,2,1,2,1,2],
+					semilocrian: 		[2,1,2,1,2,2],
+					superlocrian: 		[1,2,1,2,2,2]
 				}
 			}
 
-			function generateScale(tonic, majororminor, mode) {
+			function generateScale(root, majororminor, mode) {
 				var result = [];
 				var scale = scaleModes[majororminor][mode];
-				result.push(tonic);
-				var lastNoteNum = noteLetters.indexOf(tonic);
+				if (scale === undefined) return undefined;
+				result.push(root);
+				var lastNoteNum = noteLetters.indexOf(root);
 				for (var i=0; i<scale.length; i++) {
 					lastNoteNum += scale[i];
 					result.push(noteLetters[lastNoteNum%12]);
@@ -37,7 +56,7 @@
 				notes.push(noteLetters[num%12] + Math.floor(num/12));
 			}
 
-			console.log(generateScale("c", "major", "phyrigian"));
+			console.log(generateScale("c", "harmonic_minor", "harm_minor"));
 
 			var events = [];
 			var notesAgainstTime = [];
