--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Tool to create music box sheets from midi by converting them to a laser cutter file.">
     <meta name="author" content="">
 
-    <title>Bare - Start Bootstrap Template</title>
+    <title>Midi to lasercutter</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -22,6 +22,12 @@
         body {
             padding-top: 70px;
             /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+        }
+        #export-row {
+            padding-top: 20px;
+        }
+        #download-btn {
+            margin: 20px 0;
         }
     </style>
 
@@ -223,10 +229,10 @@
         <!-- /.row -->
 
         <div class="row">
-            <div class="well well-lg">Preview comes here<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+            <div class="text-center" style="width:100%;height:300px;border:1px solid black;">Preview comes here</div>
         </div>
 
-        <div class="row">
+        <div id="export-row" class="row">
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="export-format">Export format</label>
@@ -248,7 +254,7 @@
             </div>
 
             <div class="col-md-4 text-center">
-                <button class="btn btn-primary">Download Laser Cutter plans</button>
+                <button id="download-btn" class="btn btn-primary">Download Laser Cutter plans</button>
             </div>
         </div>
 
