Add IE11 user defined Array.prototype.find

--- a/miditocutter.html
+++ b/miditocutter.html
@@ -7,6 +7,32 @@
 			<label for="fileupload"> Select a file to upload</label>
 		</form>
 		<script type="text/javascript">
+
+			if (!Array.prototype.find) {
+			  Object.defineProperty(Array.prototype, "find", {
+			    value: function(predicate) {
+			      if (this === null) {
+			        throw new TypeError('Array.prototype.find called on null or undefined');
+			      }
+			      if (typeof predicate !== 'function') {
+			        throw new TypeError('predicate must be a function');
+			      }
+			      var list = Object(this);
+			      var length = list.length >>> 0;
+			      var thisArg = arguments[1];
+			      var value;
+
+			      for (var i = 0; i < length; i++) {
+			        value = list[i];
+			        if (predicate.call(thisArg, value, i, list)) {
+			          return value;
+			        }
+			      }
+			      return undefined;
+			    }
+			  });
+			}
+			
 			var noteLetters = ["c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b"]
 			var notes = [];
 
