--- a/miditocutter.html
+++ b/miditocutter.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<body>
 		<script src="inc/midi-parser.js"></script>
@@ -32,7 +33,7 @@
 			    }
 			  });
 			}
-			
+
 			var noteLetters = ["c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b"]
 			var notes = [];
 
