--- a/miditocutter.html
+++ b/miditocutter.html
@@ -34,6 +34,12 @@
 			  });
 			}
 
+			function compare (a,b) {
+				if (a > b) return 1;
+				if (a < b) return -1;
+				return 0;
+			}
+
 			var noteLetters = ["c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b"]
 			var notes = [];
 
@@ -170,7 +176,7 @@
 						}
 					}
 				}
-				events.sort(function (a,b) {return a.tick > b.tick;});
+				events.sort(function (a,b) {return compare(a.pitch,b.pitch)});
 
 				var timeAtLastTempoChange = 0;
 				var ticksAtLastTempoChange = 0;
@@ -193,10 +199,15 @@
 				}
 				
 				var shortestDeltaTBetweenNotes = Number.MAX_SAFE_INTEGER;
+
 				
 				notesAgainstTime.sort(function(a,b) {
-					return a.time > b.time;
+					return compare(a.time, b.time);
 				});
+
+				for(var i=0; i<notesAgainstTime.length; i++){
+					console.log(notesAgainstTime[i]);
+				}
 
 				for (var i=0; i<musicBox.length; i++) {
 					var notesInThisPitch = [];
